--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tauri": "tauri",
     "test": "jest --runInBand",
@@ -24,7 +24,6 @@
     "@codemirror/search": "^6.5.11",
     "@iconify-json/tabler": "^1.2.7",
     "@mdxeditor/editor": "^3.39.0",
-    "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "2.6.0",
     "@tauri-apps/plugin-dialog": "2.3.0",
@@ -37,6 +36,7 @@
     "@uiw/react-codemirror": "^4.10.4",
     "autoprefixer": "^10.4.20",
     "chroma-js": "^3.2.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.2",
     "encodeurl": "^2.0.0",
@@ -44,13 +44,13 @@
     "lucide-react": "^0.523.0",
     "markdown-it": "^14.1.0",
     "postcss": "^8.4.49",
+    "radix-ui": "^1.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^10.1.0",
     "react-markdown-editor-lite": "^1.3.4",
-    "react-redux": "^9.0.4",
     "react-router-dom": "^6.24.1",
     "react-split": "^2.0.14",
     "react-textarea-autosize": "^8.5.3",
@@ -59,7 +59,8 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite-plugin-svgr": "^4.3.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2.6.0",
@@ -68,6 +69,8 @@
     "@testing-library/user-event": "^14.5.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
@@ -77,7 +80,9 @@
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.2.0",
     "sass": "^1.89.2",
+    "shadcn": "^3.8.4",
     "ts-jest": "^29.1.1",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
     "vite": "^5.3.1"
   }
